translating everything. WIP. Domain compiling
