# infra-adapters/src/main/resources/application-oas-api.yml
@@ -1,33 +1,33 @@
 openapi: 3.0.0
 info:
   title: FLST Application API
-  description: API para filtrar productos por fecha, artículo y marca.
+  description: Application API to retreive products prices by date, productId, and brand.
   version: 1.0.0
 paths:
-  /productos:
+  /application-products:
     get:
-      summary: Obtener productos
-      description: Devuelve un json con el precio del producto solicitado en la fecha indicada (según los parámetros proporcionados).
+      summary: Get product Price at a given time
+      description: Returns item price at given time from database according to given params.
       parameters:
-        - name: fecha
+        - name: dateTime
           in: query
-          description: Fecha en formato YYYY-MM-DDTHH:mm:ssZ
+          description: DateTime Sting with YYYY-MM-DDTHH:mm:ssZ format
           schema:
             type: string
             format: date-time
-        - name: articulo
+        - name: productId
           in: query
-          description: ID del artículo.
+          description: Requested productId.
           schema:
             type: integer
-        - name: marca
+        - name: brand
           in: query
-          description: ID de la marca.
+          description: Brand id.
           schema:
             type: integer
       responses:
         '200':
-          description: Precio del producto en una fecha concreta devuelto correctamente
+          description: Item price and details from requested product at a given time (200)
           content:
             application/json:
               schema:
@@ -57,7 +57,7 @@ paths:
                   backend_message:
                     type: string
         '400':
-          description: Petición para obtener precio del producto en una fecha concreta errónea
+          description: Item price and details from requested product at a given time (400)
           content:
             application/json:
               schema:
@@ -87,7 +87,7 @@ paths:
                   backend_message:
                     type: string
         '404':
-          description: Petición para obtener precio del producto en una fecha concreta errónea
+          description: Item price and details from requested product at a given time (404)
           content:
             application/json:
               schema:
